# libmicro

./: .gitignore  README
scripts/: BlueNRG2.ld  STM32F072RB_FLASH.ld  STM32F091CBU6_FLASH.ld  STM32L476RG_FLASH.ld  STM32L476RG_FLASH_SRAM2.ld  atmega2560.cmake  attiny402.cmake  startup_stm32f091xc.s  stm32f042x6.cmake  stm32f072xB.cmake  stm32f091xC.cmake  stm32f407xx.cmake  stm32f429xx.cmake  stm32h743xx.cmake  stm32l476xx.cmake  stmBlueNRG-1.cmake  stmBlueNRG-2.cmake
src/: Blinker.h  Can.h  CanBusF.cc  CanBusF.h  CanF.cc  CanF.h  CanFrame.cc  CanFrame.h  CanUnit.cc  CanUnit.h  Console.cc  Console.h  Debug.cc  Debug.h  ErrorHandler.c  ErrorHandler.h  Gpio.cc  Gpio.h  GpioF.cc  GpioF.h  GpioF0.cc  GpioF4.cc  GpioH.cc  GpioH7.cc  GpioL.cc  GpioL.h  GpioL4.cc  GpioNRG.cc  GpioNRG.h  GpioX86T.cc  GpioX86T.h  Hal.h  HalBlueNRG.h  HalBlueNRG1.h  HalStm32F0.cc  HalStm32F0.h  HalStm32F4.cc  HalStm32F4.h  HalStm32H7.h  HalStm32L4.h  (+49 more)
src/actuators/: BipolarStepper.cc  BipolarStepper.h  BrushedMotor.cc  BrushedMotor.h
src/character/: BufferedCharacterSink.h  FixedLineSink.h  ICharacterInput.h  ICharacterOutput.h  ICharacterSink.h  LineSink.h
src/collection/: CharacterCircularQueue.h  CircularBuffer.cc  CircularBuffer.h  CircularQueue.h  Queue.h
src/control/: PidController.cc  PidController.h
src/imu/: IAccelerometer.h  IGyroscope.h  IImu.h  ILis3dshBsp.h  IMagnetometer.h
src/imu/lis3dsh/: Lis3dshAccelerometer.cc  Lis3dshAccelerometer.h  Lis3dshConstants.h  Lis3dshSpiBsp.cc  Lis3dshSpiBsp.h
src/imu/lsm6ds3/: ILsm6ds3Bsp.h  Lsm6ds3.cc  Lsm6ds3.h  Lsm6ds3Constants.h  Lsm6ds3SpiBsp.cc  Lsm6ds3SpiBsp.h
src/imu/mpu6050/: Mpu6050.cc  Mpu6050.h  Mpu6050_6Axis_MotionApps20.h  helper_3dmath.h
src/numeric/: IncrementalAverage.cc  IncrementalAverage.h  RollingAverage.cc  RollingAverage.h
src/rf/: Nrf24L01P.cc  Nrf24L01P.h  SymaX5HWRxProtocol.cc  SymaX5HWRxProtocol.h
src/storage/: FileRandomAccessStorage.h  FlashEepromStorage.h  ICircullarQueueStorage.h  IRandomAccessStorage.h  SerialFlash.cc  SerialFlash.h
src/x86-test/: Engine.cc  Engine.h
test/: 00StorageTest.cc  01CcqTest.cc  01StorageTest.cc  02CcqTest.cc  02QueueTest.cc  03QueueTest.cc  03TimerTest.cc  04TimerTest.cc  05NumericTest.cc  06SourceSinkTest.cc  07CircularBufferTest.cc  CMakeLists.txt  ccqTest.cc  ccqTest2.cc  storageTest.cc
test/testOnUc/: main.cc
