CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_VERBOSE_MAKEFILE OFF)

# hardcoded!
SET (CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS "-std=gnu99 -Wall" CACHE INTERNAL "c compiler flags")
SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall" CACHE INTERNAL "cxx compiler flags")
ADD_DEFINITIONS ("-DUNIT_TEST")

PROJECT (libmicrotest)
ENABLE_TESTING ()
INCLUDE_DIRECTORIES("../src/")

SET(SOURCES)
LIST (APPEND SOURCES "../src/storage/IRandomAccessStorage.h")
LIST (APPEND SOURCES "../src/storage/ICircullarQueueStorage.h")
LIST (APPEND SOURCES "../src/storage/FlashEepromStorage.h")
LIST (APPEND SOURCES "../src/storage/FileRandomAccessStorage.h")
LIST (APPEND SOURCES "../src/ErrorHandler.h")
LIST (APPEND SOURCES "../src/ErrorHandler.c")
LIST (APPEND SOURCES "../src/Timer.h")
LIST (APPEND SOURCES "../src/TimerUnit.cc")
LIST (APPEND SOURCES "../src/collection/CircularQueue.h")
LIST (APPEND SOURCES "../src/collection/Queue.h")
LIST (APPEND SOURCES "../src/numeric/IncrementalAverage.h")
LIST (APPEND SOURCES "../src/numeric/IncrementalAverage.cc")
LIST (APPEND SOURCES "../src/numeric/RollingAverage.h")
LIST (APPEND SOURCES "../src/numeric/RollingAverage.cc")
LIST (APPEND SOURCES "00CatchInit.cc")
LIST (APPEND SOURCES "01StorageTest.cc")
LIST (APPEND SOURCES "02CcqTest.cc")
LIST (APPEND SOURCES "03QueueTest.cc")
LIST (APPEND SOURCES "04TimerTest.cc")
LIST (APPEND SOURCES "05NumericTest.cc")

ADD_EXECUTABLE (libmicrotest ${SOURCES})
ADD_TEST (libmicrotest libmicrotest)
